# delphi

./: .gitignore  Cargo.toml  README.md  delphi  plan-delphi.prompt.md  plan-studio.md  pyproject.toml
.github/workflows/: release.yml
crates/delphi-cli/: Cargo.toml
crates/delphi-cli/src/: main.rs
crates/delphi-core/: Cargo.toml
crates/delphi-core/src/: chord.rs  duration.rs  dynamics.rs  event.rs  gm.rs  interval.rs  lib.rs  notation.rs  note.rs  project.rs  scale.rs
crates/delphi-engine/: Cargo.toml
crates/delphi-engine/src/: lib.rs  output.rs  scheduler.rs  soundfont.rs  synth.rs
crates/delphi-gui/: Cargo.toml
crates/delphi-gui/assets/: delphi-studio.desktop
crates/delphi-gui/src/: app.rs  editor.rs  export.rs  main.rs  mixer.rs  piano_roll.rs  player.rs  scripting.rs  soundfont.rs  studio.rs  theme.rs  theory.rs  visualizer.rs
crates/delphi-midi/: Cargo.toml
crates/delphi-midi/src/: export.rs  lib.rs
crates/delphi-py/: Cargo.toml
crates/delphi-py/src/: engine.rs  lib.rs  midi.rs  sf.rs  types.rs
deploy/: install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  package.sh
docs/: composition.md  notation.md  notebook.md  repl.md  songs-and-tracks.md  studio.md  theory.md
examples/: blues.delphi  digital_shrine.dstudio  hello.delphi  showcase.dstudio  solo_bass.dstudio  solo_drums.dstudio  solo_piano.dstudio  solo_strings.dstudio  solo_violin.dstudio  twinkle.delphi
python/delphi/: __init__.py  cli.py  composition.py  context.py  export.py  help.py  livecode.py  notation.py  notebook.py  playback.py  repl.py  song.py  soundfont.py  studio.py  theory.py  visualizer.py
python/delphi/examples/: __init__.py  canon.delphi
tests/python/: test_export.py  test_notation.py  test_studio.py  test_theory.py
