[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "delphi"
version = "0.6.0"
description = "A music scripting language for composing real music"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
notebook = ["ipython>=7.0", "jupyter"]

[project.scripts]
delphi = "delphi.cli:main"

[tool.maturin]
python-source = "python"
module-name = "delphi._engine"
features = ["pyo3/extension-module"]
manifest-path = "crates/delphi-py/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
