[package]
name = "delphi-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
delphi-core = { workspace = true }
delphi-midi = { workspace = true }
delphi-engine = { workspace = true }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
